--- a/ETL_EDA.ipynb
+++ b/ETL_EDA.ipynb
@@ -13,12 +13,12 @@
    "metadata": {},
    "source": [
     "## 1. Raw Data from LAPD     \n",
-    "The [dataset](https://www.google.com) is a continuously updated file in csv format. It contains City of Los Angeles arrest data from 2010 to present. It can be retrieved simply by making requests without parameters. For more complicated API call, you may need to add query parameters."
+    "The [dataset](https://data.lacity.org/A-Safe-City/Arrest-Data-from-2010-to-Present/yru6-6re4) is a continuously updated file in csv format. It contains City of Los Angeles arrest data from 2010 to present. It can be retrieved simply by making requests without parameters. For more complicated API call, you may need to add query parameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'rpt_id': '5811793', 'arst_date': '2019-12-01T00:00:00.000', 'time': '0311', 'area': '15', 'area_desc': 'N Hollywood', 'rd': '1565', 'age': '26', 'sex_cd': 'M', 'descent_cd': 'H', 'chrg_grp_cd': '22', 'grp_description': 'Driving Under Influence', 'arst_typ_cd': 'M', 'charge': '23152(A)VC', 'chrg_desc': 'DRUNK DRIVING ALCOHOL/DRUGS', 'location': 'VINELAND                     AV', 'crsst': 'HOLLYWOOD                    FY', 'location_1': {'latitude': '34.1468', 'longitude': '-118.3703', 'human_address': '{\"address\": \"\", \"city\": \"\", \"state\": \"\", \"zip\": \"\"}'}}, {'rpt_id': '5811921', 'arst_date': '2019-12-01T00:00:00.000', 'time': '0300', 'area': '13', 'area_desc': 'Newton', 'rd': '1307', 'age': '21', 'sex_cd': 'M', 'descent_cd': 'B', 'chrg_grp_cd': '04', 'grp_description': 'Aggravated Assault', 'arst_typ_cd': 'F', 'charge': '245(D)(1)PC', 'chrg_desc': 'ASSAULT W/FIREARM ON PO OR FIREMAN', 'location': '700    CROCKER                      ST', 'location_1': {'latitude': '34.0401', 'longitude': '-118.2459', 'human_address': '{\"address\": \"\", \"city\": \"\", \"state\": \"\", \"zip\": \"\"}'}}]\n",
+      "[{'rpt_id': '191919936', 'arst_date': '2019-11-02T00:00:00.000', 'time': '1605', 'area': '19', 'area_desc': 'Mission', 'rd': '1972', 'age': '62', 'sex_cd': 'M', 'descent_cd': 'W', 'chrg_grp_cd': '06', 'grp_description': 'Larceny', 'arst_typ_cd': 'M', 'charge': '490.1PC', 'chrg_desc': 'PETTY THEFT UNDER $50.00', 'location': '9000    SEPULVEDA                    BL', 'location_1': {'latitude': '34.2337', 'longitude': '-118.4676', 'human_address': '{\"address\": \"\", \"city\": \"\", \"state\": \"\", \"zip\": \"\"}'}}, {'rpt_id': '5789339', 'arst_date': '2019-11-02T00:00:00.000', 'time': '2300', 'area': '18', 'area_desc': 'Southeast', 'rd': '1842', 'age': '18', 'sex_cd': 'M', 'descent_cd': 'B', 'chrg_grp_cd': '12', 'grp_description': 'Weapon (carry/poss)', 'arst_typ_cd': 'F', 'charge': '25850(A)PC', 'chrg_desc': 'CARRY LOADED F/ARM PRSON/HEH PUBLIC PLACE', 'location': '400 W  111TH                        ST', 'location_1': {'latitude': '33.9348', 'longitude': '-118.2811', 'human_address': '{\"address\": \"\", \"city\": \"\", \"state\": \"\", \"zip\": \"\"}'}}]\n",
       "...\n",
       "[{'rpt_id': '5816871', 'arst_date': '2019-12-07T00:00:00.000', 'time': '0650', 'area': '01', 'area_desc': 'Central', 'rd': '0119', 'age': '31', 'sex_cd': 'M', 'descent_cd': 'B', 'chrg_grp_cd': '16', 'grp_description': 'Narcotic Drug Laws', 'arst_typ_cd': 'M', 'charge': '11377(A)HS', 'chrg_desc': 'POSSESSION CONTROLLED SUBSTANCE', 'location': '800 N  ALAMEDA                      ST', 'location_1': {'latitude': '34.0563', 'longitude': '-118.2374', 'human_address': '{\"address\": \"\", \"city\": \"\", \"state\": \"\", \"zip\": \"\"}'}}, {'rpt_id': '5816829', 'arst_date': '2019-12-07T00:00:00.000', 'time': '0354', 'area': '01', 'area_desc': 'Central', 'rd': '0135', 'age': '55', 'sex_cd': 'F', 'descent_cd': 'B', 'chrg_grp_cd': '22', 'grp_description': 'Driving Under Influence', 'arst_typ_cd': 'M', 'charge': '23152(A)VC', 'chrg_desc': 'DRUNK DRIVING ALCOHOL/DRUGS', 'location': '10                           FY', 'crsst': '51ST                         ST', 'location_1': {'latitude': '34.0495', 'longitude': '-118.2458', 'human_address': '{\"address\": \"\", \"city\": \"\", \"state\": \"\", \"zip\": \"\"}'}}]\n"
      ]
@@ -47,7 +47,7 @@
     "# download data\n",
     "CRIME_SOURCE = \"data.lacity.org\"\n",
     "client0 = Socrata(CRIME_SOURCE, None)\n",
-    "results = client0.get(\"yru6-6re4\",where=\"arst_date > '2019-11-30T00:00:00.000'\") # wait to be confirmed\n",
+    "results = client0.get(\"yru6-6re4\",where=\"arst_date > '2019-11-01T00:00:00.000'\",limit = 1000000) # wait to be confirmed\n",
     "print(results[:2])\n",
     "print('...')\n",
     "print(results[-2:])"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -102,159 +102,159 @@
        "      <th>charge</th>\n",
        "      <th>chrg_desc</th>\n",
        "      <th>location</th>\n",
-       "      <th>crsst</th>\n",
        "      <th>location_1</th>\n",
+       "      <th>crsst</th>\n",
        "      <th>hour</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5811793</td>\n",
-       "      <td>2019-12-01</td>\n",
-       "      <td>0311</td>\n",
-       "      <td>15</td>\n",
-       "      <td>N Hollywood</td>\n",
-       "      <td>1565</td>\n",
-       "      <td>26</td>\n",
+       "      <td>191919936</td>\n",
+       "      <td>2019-11-02</td>\n",
+       "      <td>1605</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Mission</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>62</td>\n",
        "      <td>M</td>\n",
-       "      <td>H</td>\n",
-       "      <td>22</td>\n",
-       "      <td>Driving Under Influence</td>\n",
+       "      <td>W</td>\n",
+       "      <td>06</td>\n",
+       "      <td>Larceny</td>\n",
        "      <td>M</td>\n",
-       "      <td>23152(A)VC</td>\n",
-       "      <td>DRUNK DRIVING ALCOHOL/DRUGS</td>\n",
-       "      <td>VINELAND                     AV</td>\n",
-       "      <td>HOLLYWOOD                    FY</td>\n",
-       "      <td>{'latitude': '34.1468', 'longitude': '-118.370...</td>\n",
-       "      <td>3</td>\n",
+       "      <td>490.1PC</td>\n",
+       "      <td>PETTY THEFT UNDER $50.00</td>\n",
+       "      <td>9000    SEPULVEDA                    BL</td>\n",
+       "      <td>{'latitude': '34.2337', 'longitude': '-118.467...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5811921</td>\n",
-       "      <td>2019-12-01</td>\n",
-       "      <td>0300</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Newton</td>\n",
-       "      <td>1307</td>\n",
-       "      <td>21</td>\n",
+       "      <td>5789339</td>\n",
+       "      <td>2019-11-02</td>\n",
+       "      <td>2300</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Southeast</td>\n",
+       "      <td>1842</td>\n",
+       "      <td>18</td>\n",
        "      <td>M</td>\n",
        "      <td>B</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Aggravated Assault</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Weapon (carry/poss)</td>\n",
        "      <td>F</td>\n",
-       "      <td>245(D)(1)PC</td>\n",
-       "      <td>ASSAULT W/FIREARM ON PO OR FIREMAN</td>\n",
-       "      <td>700    CROCKER                      ST</td>\n",
+       "      <td>25850(A)PC</td>\n",
+       "      <td>CARRY LOADED F/ARM PRSON/HEH PUBLIC PLACE</td>\n",
+       "      <td>400 W  111TH                        ST</td>\n",
+       "      <td>{'latitude': '33.9348', 'longitude': '-118.281...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{'latitude': '34.0401', 'longitude': '-118.245...</td>\n",
-       "      <td>3</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5812227</td>\n",
-       "      <td>2019-12-01</td>\n",
-       "      <td>1540</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Newton</td>\n",
-       "      <td>1362</td>\n",
+       "      <td>5789301</td>\n",
+       "      <td>2019-11-02</td>\n",
+       "      <td>2125</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Southeast</td>\n",
+       "      <td>1823</td>\n",
        "      <td>28</td>\n",
        "      <td>M</td>\n",
-       "      <td>B</td>\n",
-       "      <td>05</td>\n",
-       "      <td>Burglary</td>\n",
+       "      <td>H</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Miscellaneous Other Violations</td>\n",
        "      <td>F</td>\n",
-       "      <td>459PC</td>\n",
-       "      <td>BURGLARY</td>\n",
-       "      <td>400 E  49TH                         ST</td>\n",
+       "      <td>236PC</td>\n",
+       "      <td>FALSE IMPRISONMENT</td>\n",
+       "      <td>400 E  93RD                         ST</td>\n",
+       "      <td>{'latitude': '33.952', 'longitude': '-118.2673...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{'latitude': '33.9988', 'longitude': '-118.269...</td>\n",
-       "      <td>15</td>\n",
+       "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>190920652</td>\n",
-       "      <td>2019-12-01</td>\n",
-       "      <td>0225</td>\n",
-       "      <td>09</td>\n",
-       "      <td>Van Nuys</td>\n",
-       "      <td>0914</td>\n",
-       "      <td>45</td>\n",
+       "      <td>5789240</td>\n",
+       "      <td>2019-11-02</td>\n",
+       "      <td>1400</td>\n",
+       "      <td>03</td>\n",
+       "      <td>Southwest</td>\n",
+       "      <td>0357</td>\n",
+       "      <td>52</td>\n",
        "      <td>M</td>\n",
-       "      <td>H</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Prostitution/Allied</td>\n",
-       "      <td>M</td>\n",
-       "      <td>647(B)(2)PC</td>\n",
-       "      <td>ENGAGE/SOLICIT SEX FOR MONEY/ETC</td>\n",
-       "      <td>SEPULVEDA                    BL</td>\n",
-       "      <td>HART                         ST</td>\n",
-       "      <td>{'latitude': '34.1976', 'longitude': '-118.466...</td>\n",
-       "      <td>2</td>\n",
+       "      <td>B</td>\n",
+       "      <td>08</td>\n",
+       "      <td>Other Assaults</td>\n",
+       "      <td>F</td>\n",
+       "      <td>243(C)(2)PC</td>\n",
+       "      <td>BATTERY ON PEACE OFFICER</td>\n",
+       "      <td>1100    EXPOSITION                   BL</td>\n",
+       "      <td>{'latitude': '34.0219', 'longitude': '-118.295...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5812327</td>\n",
-       "      <td>2019-12-01</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>06</td>\n",
-       "      <td>Hollywood</td>\n",
-       "      <td>0646</td>\n",
-       "      <td>39</td>\n",
+       "      <td>5789096</td>\n",
+       "      <td>2019-11-02</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Topanga</td>\n",
+       "      <td>2126</td>\n",
+       "      <td>19</td>\n",
        "      <td>M</td>\n",
-       "      <td>B</td>\n",
-       "      <td>03</td>\n",
-       "      <td>Robbery</td>\n",
+       "      <td>W</td>\n",
+       "      <td>08</td>\n",
+       "      <td>Other Assaults</td>\n",
        "      <td>F</td>\n",
-       "      <td>211PC</td>\n",
-       "      <td>ROBBERY</td>\n",
-       "      <td>COSMO</td>\n",
-       "      <td>HOLLYWOOD                    BL</td>\n",
-       "      <td>{'latitude': '34.1016', 'longitude': '-118.328...</td>\n",
-       "      <td>20</td>\n",
+       "      <td>422(A)PC</td>\n",
+       "      <td>TERRORIZE CAUSING FEAR</td>\n",
+       "      <td>7800    DE SOTO                      AV</td>\n",
+       "      <td>{'latitude': '34.212', 'longitude': '-118.5885...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      rpt_id  arst_date  time area    area_desc    rd  age sex_cd descent_cd  \\\n",
-       "0    5811793 2019-12-01  0311   15  N Hollywood  1565   26      M          H   \n",
-       "1    5811921 2019-12-01  0300   13       Newton  1307   21      M          B   \n",
-       "2    5812227 2019-12-01  1540   13       Newton  1362   28      M          B   \n",
-       "3  190920652 2019-12-01  0225   09     Van Nuys  0914   45      M          H   \n",
-       "4    5812327 2019-12-01  2015   06    Hollywood  0646   39      M          B   \n",
+       "      rpt_id  arst_date  time area  area_desc    rd  age sex_cd descent_cd  \\\n",
+       "0  191919936 2019-11-02  1605   19    Mission  1972   62      M          W   \n",
+       "1    5789339 2019-11-02  2300   18  Southeast  1842   18      M          B   \n",
+       "2    5789301 2019-11-02  2125   18  Southeast  1823   28      M          H   \n",
+       "3    5789240 2019-11-02  1400   03  Southwest  0357   52      M          B   \n",
+       "4    5789096 2019-11-02  1500   21    Topanga  2126   19      M          W   \n",
        "\n",
-       "  chrg_grp_cd          grp_description arst_typ_cd       charge  \\\n",
-       "0          22  Driving Under Influence           M   23152(A)VC   \n",
-       "1          04       Aggravated Assault           F  245(D)(1)PC   \n",
-       "2          05                 Burglary           F        459PC   \n",
-       "3          13      Prostitution/Allied           M  647(B)(2)PC   \n",
-       "4          03                  Robbery           F        211PC   \n",
+       "  chrg_grp_cd                 grp_description arst_typ_cd       charge  \\\n",
+       "0          06                         Larceny           M      490.1PC   \n",
+       "1          12             Weapon (carry/poss)           F   25850(A)PC   \n",
+       "2          24  Miscellaneous Other Violations           F        236PC   \n",
+       "3          08                  Other Assaults           F  243(C)(2)PC   \n",
+       "4          08                  Other Assaults           F     422(A)PC   \n",
        "\n",
-       "                            chrg_desc                                location  \\\n",
-       "0         DRUNK DRIVING ALCOHOL/DRUGS         VINELAND                     AV   \n",
-       "1  ASSAULT W/FIREARM ON PO OR FIREMAN  700    CROCKER                      ST   \n",
-       "2                            BURGLARY  400 E  49TH                         ST   \n",
-       "3    ENGAGE/SOLICIT SEX FOR MONEY/ETC         SEPULVEDA                    BL   \n",
-       "4                             ROBBERY                                   COSMO   \n",
+       "                                   chrg_desc  \\\n",
+       "0                   PETTY THEFT UNDER $50.00   \n",
+       "1  CARRY LOADED F/ARM PRSON/HEH PUBLIC PLACE   \n",
+       "2                         FALSE IMPRISONMENT   \n",
+       "3                   BATTERY ON PEACE OFFICER   \n",
+       "4                     TERRORIZE CAUSING FEAR   \n",
        "\n",
-       "                             crsst  \\\n",
-       "0  HOLLYWOOD                    FY   \n",
-       "1                              NaN   \n",
-       "2                              NaN   \n",
-       "3  HART                         ST   \n",
-       "4  HOLLYWOOD                    BL   \n",
+       "                                  location  \\\n",
+       "0  9000    SEPULVEDA                    BL   \n",
+       "1   400 W  111TH                        ST   \n",
+       "2   400 E  93RD                         ST   \n",
+       "3  1100    EXPOSITION                   BL   \n",
+       "4  7800    DE SOTO                      AV   \n",
        "\n",
-       "                                          location_1  hour  \n",
-       "0  {'latitude': '34.1468', 'longitude': '-118.370...     3  \n",
-       "1  {'latitude': '34.0401', 'longitude': '-118.245...     3  \n",
-       "2  {'latitude': '33.9988', 'longitude': '-118.269...    15  \n",
-       "3  {'latitude': '34.1976', 'longitude': '-118.466...     2  \n",
-       "4  {'latitude': '34.1016', 'longitude': '-118.328...    20  "
+       "                                          location_1 crsst  hour  \n",
+       "0  {'latitude': '34.2337', 'longitude': '-118.467...   NaN    16  \n",
+       "1  {'latitude': '33.9348', 'longitude': '-118.281...   NaN    23  \n",
+       "2  {'latitude': '33.952', 'longitude': '-118.2673...   NaN    21  \n",
+       "3  {'latitude': '34.0219', 'longitude': '-118.295...   NaN    14  \n",
+       "4  {'latitude': '34.212', 'longitude': '-118.5885...   NaN    15  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,14 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rows=990, update=990, insert=0\n"
+      "rows=7349, update=990, insert=6359\n"
      ]
     }
    ],
@@ -307,6 +307,13 @@
     "print(f\"rows={df.shape[0]}, update={update_count}, \"\n",
     "      f\"insert={df.shape[0]-update_count}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
